new proj/src/objects/GE_ES_Convertible_Orders__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Converted_Revenue__c</fullName>
        <description>The calculated revenue $s convertible on this date.</description>
        <formula>GE_ES_Revenue_Conversion_Percent__c * GE_ES_Opportunity_ID__r.GE_ES_Pipeline_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The calculated revenue $s convertible on this date.</inlineHelpText>
        <label>Converted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Convertible_Year__c</fullName>
        <label>Convertible Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Future_Amount__c</fullName>
        <label>Future Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_100_Con__c</fullName>
        <description>Is 100% of the opportunity pipeline amount contractually allowed to be converted to sales in the same quarter as the opportunity&apos;s expected order date?</description>
        <label>Is 100% Convertible for Same EOD Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Is_100_Convertible_for_1st_CA_Qtr__c</fullName>
        <defaultValue>false</defaultValue>
        <description>gets all the quarters amount in to 1st CA quarter.</description>
        <label>Is 100% Convertible for 1st CA Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_ES_Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Convertible_Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q1FirstyrAmt__c</fullName>
        <label>Q1FirstyrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q1SecondYrAmt__c</fullName>
        <label>Q1SecondYrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q1ThirdYrAmt__c</fullName>
        <label>Q1ThirdYrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q2FirstYrAmt__c</fullName>
        <label>Q2FirstYrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q2SecondYrAmt__c</fullName>
        <label>Q2SecondYrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q2ThirdYrAmt__c</fullName>
        <label>Q2ThirdYrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q3FirstYrAmt__c</fullName>
        <label>Q3FirstYrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q3SecondYrAmt__c</fullName>
        <label>Q3SecondYrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Q3ThirdYrAmt__c</fullName>
        <label>Q3ThirdYrAmt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quarter1_Amount__c</fullName>
        <label>Quarter1 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quarter_1__c</fullName>
        <description>To store the Quarter number</description>
        <label>Quarter 1</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quarter_2_Amount__c</fullName>
        <label>Quarter 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quarter_2__c</fullName>
        <label>Quarter 2</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quarter_3_Amount__c</fullName>
        <label>Quarter 3 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quarter_3__c</fullName>
        <label>Quarter 3</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Quarter_4_Amount__c</fullName>
        <label>Quarter 4 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_ES_Revenue_Conversion_Date__c</fullName>
        <description>The estimated revenue milestone date.</description>
        <inlineHelpText>The estimated revenue milestone date.</inlineHelpText>
        <label>Revenue Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Revenue_Conversion_Percent__c</fullName>
        <description>The percent of total order value convertible on this date.</description>
        <inlineHelpText>The percent of total order value convertible on this date.</inlineHelpText>
        <label>Revenue Conversion Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_ES_Revenue_Conversion_QTR__c</fullName>
        <formula>TEXT(YEAR( GE_ES_Revenue_Conversion_Date__c )) &amp;&apos; Q&apos;&amp; 
TEXT( (FLOOR(MONTH( GE_ES_Revenue_Conversion_Date__c ) / 4))+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Conversion QTR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Revenue_Event__c</fullName>
        <inlineHelpText>Use this field to classify the type of revenue milestone.</inlineHelpText>
        <label>Revenue Event</label>
        <picklist>
            <picklistValues>
                <fullName>Drawings Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials Ordered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products Shipped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Convertible Orders Forecast</label>
    <nameField>
        <label>Convertible Orders  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Convertible Orders Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>